rc-devops/k8s/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      volumes:
        - name: elasticsearch-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
        - name: elasticsearch-config
          configMap:
            name: elasticsearch-config
      containers:
        - name: elasticsearch
          image: elasticsearch:5.6.14
          resources:
            requests:
              memory: "4Gi"
              cpu: "250m"
            limits:
              memory: "6Gi"
              cpu: "1"
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: elasticsearch-storage
              mountPath: /usr/share/elasticsearch/data
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
