rc-devops/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 4000
          - path: /api
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 80
          - path: /elasticsearch
            backend:
              serviceName: elasticsearch-cluster-ip-service
              servicePort: 9200
